# lead_vst

./: .gitignore  CMakeLists.txt  README.md
Assets/: LeadSynth.icns
Source/: Arpeggiator.h  LadderFilter.h  MidiLearnManager.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  SettingsManager.h  StandaloneApp.cpp  SynthLookAndFeel.h  SynthVoice.cpp  SynthVoice.h
scripts/: build-all.sh  build-standalone.sh  clean.sh  install-plugins.sh
